# stackplz-rust

./: .gitignore  Cargo.toml  README.md  build.rs  build_env.sh
.github/workflows/: build.yml
ebpf/: types.h  utils.h
ebpf/common/: buffer.h  consts.h
src/: assets.rs  lib.rs  logger.rs  main.rs
src/argtype/: base_types.rs  complex_types.rs  consts.rs  mod.rs  op.rs  registry.rs  render.rs
src/cli/: args.rs  mod.rs  root.rs  stack_cmd.rs  syscall_cmd.rs
src/config/: global.rs  hook_json.rs  mod.rs  point_arg.rs  point_parser.rs  sconfig.rs  stack.rs  syscall.rs  target.rs
src/contract/: args.rs  consts.rs  decode.rs  enums.rs  mod.rs  types.rs
src/ebpf/: bpf_common.rs  capability.rs  mod.rs
src/event/: context.rs  hook.rs  ievent.rs  mod.rs  syscall_event.rs  unwind_ffi.rs
src/module/: mod.rs  stack_probe.rs  syscall_tracepoint.rs
src/util/: fs.rs  hexdump.rs  mod.rs  reg.rs
tests/: contracts.rs
